# Qtscreenshot_Integrated_Tests

./: CMakeLists.txt  README.md  main.cpp  tst_firsttest.cpp
qTests/: CMakeLists.txt  testgui.cpp  testgui.h
qTests/Tests1/: testgui.cpp
